[gd_scene load_steps=24 format=2]

[ext_resource path="res://textures/graphics/content sign.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Scripts/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://textures/buttons/little sound button hover.png" type="Texture" id=3]
[ext_resource path="res://textures/buttons/little sound button off.png" type="Texture" id=4]
[ext_resource path="res://textures/buttons/little sound button.png" type="Texture" id=5]
[ext_resource path="res://textures/buttons/little close button press.png" type="Texture" id=6]
[ext_resource path="res://textures/buttons/little close button hover.png" type="Texture" id=7]
[ext_resource path="res://textures/buttons/little close button.png" type="Texture" id=8]
[ext_resource path="res://textures/buttons/little music button off.png" type="Texture" id=9]
[ext_resource path="res://textures/buttons/little music button hover.png" type="Texture" id=10]
[ext_resource path="res://textures/buttons/little music button.png" type="Texture" id=11]
[ext_resource path="res://textures/buttons/little confirm button.png" type="Texture" id=12]
[ext_resource path="res://textures/graphics/quit sign.png" type="Texture" id=13]
[ext_resource path="res://textures/buttons/little confirm button press.png" type="Texture" id=14]
[ext_resource path="res://textures/buttons/little confirm button hover.png" type="Texture" id=15]
[ext_resource path="res://Sound/confirm_button_sound.mp3" type="AudioStream" id=16]
[ext_resource path="res://Sound/scroll_button_sound.mp3" type="AudioStream" id=17]
[ext_resource path="res://Sound/select_button_sound.mp3" type="AudioStream" id=18]

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 272, -328 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QuitSign:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 328, -152 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("QuitSign:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 328, 184 ), Vector2( 328, 192 ), Vector2( 328, -152 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("QuitSign:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 328, -152 ), Vector2( 328, 192 ), Vector2( 328, 184 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "settingspanelhide"
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, 152 ), Vector2( 272, 160 ), Vector2( 272, -328 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "settingspanelshow"
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 272, -328 ), Vector2( 272, 160 ), Vector2( 272, 152 ) ]
}

[node name="SettingsMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="SettingsPanel" type="TextureRect" parent="."]
margin_left = 272.0
margin_top = -328.0
margin_right = 799.0
margin_bottom = -17.0
texture = ExtResource( 1 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="SettingsPanel"]
margin_left = 48.0
margin_top = 40.0
margin_right = 108.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="SettingsPanel"]
margin_left = 48.0
margin_top = 104.0
margin_right = 108.0
margin_bottom = 164.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="SettingsPanel"]
margin_left = 368.0
margin_top = 40.0
margin_right = 428.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitSign" type="TextureRect" parent="."]
margin_left = 328.0
margin_top = -152.0
margin_right = 745.0
margin_bottom = -34.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmQuit" type="TextureButton" parent="QuitSign"]
margin_left = 296.0
margin_top = 24.0
margin_right = 356.0
margin_bottom = 84.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelQuit" type="TextureButton" parent="QuitSign"]
margin_left = 52.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 84.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 6 )
anims/quitprompthide = SubResource( 7 )
anims/quitpromptshow = SubResource( 3 )
anims/settingspanelhide = SubResource( 4 )
anims/settingspanelshow = SubResource( 5 )

[node name="HoverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SFX"

[node name="SelectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "SFX"

[node name="ConfirmPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "SFX"

[connection signal="pressed" from="SettingsPanel/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="toggled" from="SettingsPanel/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="SettingsPanel/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="toggled" from="SettingsPanel/SoundButton" to="." method="_on_SoundButton_toggled"]
[connection signal="pressed" from="SettingsPanel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="QuitSign/ConfirmQuit" to="." method="_on_ConfirmQuit_mouse_entered"]
[connection signal="pressed" from="QuitSign/ConfirmQuit" to="." method="_on_ConfirmQuit_pressed"]
[connection signal="mouse_entered" from="QuitSign/CancelQuit" to="." method="_on_CancelQuit_mouse_entered"]
[connection signal="pressed" from="QuitSign/CancelQuit" to="." method="_on_CancelQuit_pressed"]
